<resources>
    <string name="app_name">viaNature</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">email</string>
    <string name="login">login</string>
    <string name="forgot_password" />
    <string name="forgotpass">ForgotPass</string>

    <string-array name="region">
        <item>East</item>
        <item>West</item>
        <item>North</item>
        <item>South</item>
    </string-array>

    <string-array name="type">
        <item>open</item>
        <item>rocks</item>
        <item>forest</item>
        <item>mountain</item>
    </string-array>

    <string-array name="hardness">
        <item>chill</item>
        <item>medium</item>
        <item>extreme</item>
    </string-array>

</resources>